--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -34,9 +34,10 @@ textarea {
 
 body {
   font-size: 1.6rem;
+  background: $darkblue;
 }
 
-.wrapper {
+.container {
   margin: auto;
   width: 100%;
   max-width: 110rem;
