--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,9 @@
 @import "@fontsource/poppins/index.css";
+@import "@fontsource/poppins/600.css";
+@import "@fontsource/poppins/700.css";
+@import "@fontsource/poppins/400.css";
+@import "@fontsource/poppins/900.css";
+@import "boxicons/css/boxicons.min.css";
+
 @import "base/index";
 @import "components/index";
