--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -11,10 +11,13 @@ header {
     justify-content: space-between;
 
     > a {
+      display: inline-block;
       color: $white;
       font-size: 2.4rem;
       font-weight: bold;
       cursor: default;
+
+      @include animate('slideRight', 0.5s, 0.2s);
     }
 
     nav {
@@ -26,6 +29,9 @@ header {
         color: $white;
         font-weight: bold;
         transition: color 0.3s;
+
+        $delay: calc(0.1s * var(--i));
+        @include animate('slideTop', 0.5s, $delay);
 
         &:hover, 
         &.active {
