--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -10,10 +10,13 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  scroll-behavior: smooth;
+  font-family: "Poppins", sans-serif;
 }
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 
   @include onMobile {
     font-size: 56%;
@@ -22,7 +25,6 @@ html {
 
 html,
 body {
-  font-family: "Poppins", sans-serif;
   text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
 }
