--- a/src/styles/components/main.scss
+++ b/src/styles/components/main.scss
@@ -3,8 +3,8 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 100px;
     color: $white;
+    height: 100vh;
 
     .hero {
       max-width: 600px;
@@ -69,7 +69,7 @@ main {
         }
       }
 
-      > a {
+      .btn-cv {
         display: inline-block;
         padding: 12px 28px;
         background: $lightblue;
