--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,8 +1,11 @@
 header {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 60px;
   padding: 20px 0;
-  background: transparent;
+  background: $darkblue;
   z-index: 100;
 
   .container {
