--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -1,9 +1,10 @@
-.hero {
+#hero {
+  display: none;
+  
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: $white;
     height: 100vh;
 
     h1 {
