--- a/src/styles/components/portfolio.scss
+++ b/src/styles/components/portfolio.scss
@@ -1,5 +1,5 @@
 #portfolio {
-  // display: none;
+  display: none;
 
   background: $grey;
   
@@ -16,7 +16,7 @@
       grid-template-columns: repeat(3, 1fr);
       align-items: center;
       gap: 20px;
-
+      
       .box {
         position: relative;
         border-radius: 20px;
