--- a/src/styles/base/reset.scss
+++ b/src/styles/base/reset.scss
@@ -35,6 +35,10 @@ textarea {
   font-family: "Poppins", sans-serif;
 }
 
+button {
+  border: none;
+}
+
 body {
   font-size: 1.6rem;
   background: $darkblue;
