--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -29,7 +29,7 @@
 
       .text-box {
         width: 100%;
-        height: 100px;
+        height: 200px;
       }
 
       input, textarea {
@@ -45,6 +45,7 @@
         padding: 1rem;
         background: $grey;
         z-index: 1;
+        resize: none;
       }
 
       label {
@@ -58,6 +59,12 @@
         transition: 0.2s;
         z-index: 2;
         user-select: none;
+      }
+
+      button {
+        position: absolute;
+        right: 20px;
+        bottom: -20px;
       }
 
       // input:focus~label,
